update docs [skip ci]

--- a/docs/practical_examples/knowledge_graph.ipynb
+++ b/docs/practical_examples/knowledge_graph.ipynb
@@ -38,15 +38,7 @@
    "execution_count": 3,
    "id": "690c0219-d7f5-4b0d-a897-59cf8f354149",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to import module h5tbx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx"
    ]
@@ -65,6 +57,7 @@
       "  \"@context\": {\n",
       "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
       "    \"hdf5\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
+      "    \"prov\": \"http://www.w3.org/ns/prov#\",\n",
       "    \"skos\": \"http://www.w3.org/2004/02/skos/core#\"\n",
       "  },\n",
       "  \"@graph\": [\n",
@@ -76,29 +69,29 @@
       "        \"@type\": \"hdf5:Group\",\n",
       "        \"hdf5:member\": [\n",
       "          {\n",
-      "            \"@id\": \"_:N2\",\n",
+      "            \"@id\": \"https://orcid.org/0000-0001-8729-0482\",\n",
       "            \"@type\": [\n",
       "              \"hdf5:Group\",\n",
-      "              \"https://orcid.org/0000-0001-8729-0482\"\n",
+      "              \"prov:Person\"\n",
       "            ],\n",
       "            \"foaf:firstName\": \"Matthias\",\n",
       "            \"foaf:lastName\": \"Probst\",\n",
       "            \"hdf5:attribute\": [\n",
       "              {\n",
-      "                \"@id\": \"_:N3\",\n",
+      "                \"@id\": \"_:N2\",\n",
       "                \"@type\": \"hdf5:Attribute\",\n",
       "                \"hdf5:name\": \"fname\",\n",
       "                \"hdf5:value\": \"Matthias\"\n",
       "              },\n",
       "              {\n",
-      "                \"@id\": \"_:N4\",\n",
+      "                \"@id\": \"_:N3\",\n",
       "                \"@type\": \"hdf5:Attribute\",\n",
       "                \"hdf5:name\": \"hint\",\n",
       "                \"hdf5:value\": \"bah blah\",\n",
       "                \"skos:definition\": \"A hint\"\n",
       "              },\n",
       "              {\n",
-      "                \"@id\": \"_:N5\",\n",
+      "                \"@id\": \"_:N4\",\n",
       "                \"@type\": \"hdf5:Attribute\",\n",
       "                \"hdf5:name\": \"lname\",\n",
       "                \"hdf5:value\": \"Probst\"\n",
@@ -107,7 +100,7 @@
       "            \"hdf5:name\": \"/contact\"\n",
       "          },\n",
       "          {\n",
-      "            \"@id\": \"_:N6\",\n",
+      "            \"@id\": \"_:N5\",\n",
       "            \"@type\": \"hdf5:Dataset\",\n",
       "            \"hdf5:datatype\": \"H5T_FLOAT\",\n",
       "            \"hdf5:dimension\": 0,\n",
@@ -130,7 +123,7 @@
     "    grp.attrs['fname', rdflib.FOAF.firstName] = 'Matthias'\n",
     "    grp.attrs['lname', rdflib.FOAF.lastName] = 'Probst'\n",
     "    grp.attrs['hint'] = 'bah blah'\n",
-    "    grp.attrsdef['hint'] = 'A hint'\n",
+    "    grp.rdf['hint'].definition = 'A hint'\n",
     "    grp.rdf.type = rdflib.PROV.Person  # --> rdf.type = Person\n",
     "    grp.rdf.subject = 'https://orcid.org/0000-0001-8729-0482'  # -> @id='https://orcid.org/0000-0001-8729-0482'\n",
     "\n",
@@ -149,6 +142,7 @@
      "data": {
       "text/plain": [
        "{'hdf5': 'http://purl.allotrope.org/ontologies/hdf5/1.8#',\n",
+       " 'prov': 'http://www.w3.org/ns/prov#',\n",
        " 'foaf': 'http://xmlns.com/foaf/0.1/',\n",
        " 'skos': 'http://www.w3.org/2004/02/skos/core#'}"
       ]
@@ -236,7 +230,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1fa78d78b80>"
+       "<IPython.lib.display.IFrame at 0x1f7b1780970>"
       ]
      },
      "execution_count": 10,
@@ -262,19 +256,17 @@
       "{\n",
       "  \"@context\": {\n",
       "    \"fname\": \"http://xmlns.com/foaf/0.1/firstName\",\n",
-      "    \"lname\": \"http://xmlns.com/foaf/0.1/lastName\",\n",
-      "    \"prov\": \"http://www.w3.org/ns/prov#\"\n",
+      "    \"lname\": \"http://xmlns.com/foaf/0.1/lastName\"\n",
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"_:N16\",\n",
-      "      \"http://www.w3.org/2004/02/skos/core#definition\": \"A hint\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"https://orcid.org/0000-0001-8729-0482\",\n",
-      "      \"@type\": \"prov:Person\",\n",
+      "      \"@id\": \"http://www.w3.org/ns/prov#Person\",\n",
       "      \"fname\": \"Matthias\",\n",
       "      \"lname\": \"Probst\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"_:N14\",\n",
+      "      \"http://www.w3.org/2004/02/skos/core#definition\": \"A hint\"\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -288,7 +280,7 @@
     "    grp.attrs['fname', rdflib.FOAF.firstName] = 'Matthias'\n",
     "    grp.attrs['lname', rdflib.FOAF.lastName] = 'Probst'\n",
     "    grp.attrs['hint'] = 'bah blah'\n",
-    "    grp.attrsdef['hint'] = 'A hint'\n",
+    "    grp.rdf['hint'].definition = 'A hint'\n",
     "    grp.rdf.subject = rdflib.PROV.Person\n",
     "    grp.attrs['@id'] = 'https://orcid.org/0000-0001-8729-0482'\n",
     "    print(h5.dump_jsonld(indent=2, structural=False))\n",
@@ -352,7 +344,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1fa78d94790>"
+       "<IPython.lib.display.IFrame at 0x1f7b172a730>"
       ]
      },
      "execution_count": 14,
