fix the issue by inserting screenshots

--- a/docs/practical_examples/knowledge_graph.ipynb
+++ b/docs/practical_examples/knowledge_graph.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "064a9e31-1fd0-429e-9189-663e950bc52f",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "ce1a26f6-ad59-4014-b5b2-dcee38f11a26",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "78c9adf7-43f0-4aa1-8740-149bf3a5f74f",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "e8d13d2e-d66e-4028-8909-7192cfef1bf6",
    "metadata": {},
    "outputs": [
@@ -211,37 +211,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
-      "graph.html\n"
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"graph.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1911e48ecd0>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "pyvis_graph= subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
-    "pyvis_graph.cdn_resources = 'remote'\n",
-    "pyvis_graph.show('graph.html', local=False, notebook=True)"
+    "#pyvis_graph.show('graph.html', notebook=True)\n",
+    "# the above call fails in the readthedocs build process... we show an image of the result here:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c93fe042-3c77-4c00-9738-324d465213da",
+   "metadata": {},
+   "source": [
+    "![grafik.png](../_static/Screenshot_pyvis_graph.png)"
    ]
   },
   {
@@ -261,13 +247,13 @@
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"_:N14\",\n",
-      "      \"http://www.w3.org/2004/02/skos/core#definition\": \"A hint\"\n",
-      "    },\n",
-      "    {\n",
       "      \"@id\": \"http://www.w3.org/ns/prov#Person\",\n",
       "      \"fname\": \"Matthias\",\n",
       "      \"lname\": \"Probst\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"_:N14\",\n",
+      "      \"http://www.w3.org/2004/02/skos/core#definition\": \"A hint\"\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -326,31 +312,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
-      "tmp.grpah.html\n"
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"tmp.grpah.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1914309d220>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -360,20 +323,17 @@
     "pyvis_graph = subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
     "\n",
     "pyvis_graph.force_atlas_2based(overlap=0)\n",
-    "pyvis_graph.show(\"tmp.grpah.html\", local=True, notebook=True)\n",
-    "\n",
-    "# subgraph = kglab.SubgraphTensor(kg)\n",
-    "# pyvis_graph= subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
-    "# pyvis_graph.show('graph.html')"
+    "# pyvis_graph.show(\"tmp.grpah.html\", local=True, notebook=True)\n",
+    "# the above call fails in the readthedocs build process... we show an image of the result here:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c3e4344-6d33-4577-bd48-888217af6139",
+   "cell_type": "markdown",
+   "id": "2d0d3238-7763-4734-9e34-29ae7caa5b4c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![grafik.png](../_static/Screenshot_pyvis_graph2.png)"
+   ]
   },
   {
    "cell_type": "code",
