remove pivmetalib dep

--- a/docs/userguide/convention/examples/standard_name_convention.ipynb
+++ b/docs/userguide/convention/examples/standard_name_convention.ipynb
@@ -37,15 +37,7 @@
    "execution_count": 1,
    "id": "2ae9884b-2609-471a-ab4c-97e300ca804d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to import module h5tbx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "import warnings\n",
@@ -125,8 +117,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_wind7601787500\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_wind7601787500\">\n",
+       "        <input id=\"group-x_wind6131987600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_wind6131987600\">\n",
        "        x_wind</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).</li>      </il>\n",
@@ -855,8 +847,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity14906939400\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity14906939400\">\n",
+       "        <input id=\"group-x_velocity10145334800\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity10145334800\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -897,8 +889,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate14931324000\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate14931324000\">\n",
+       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate10159577700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate10159577700\">\n",
        "        derivative_of_x_velocity_wrt_x_coordinate</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : 1/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Derivative of x_velocity with respect to x_coordinate. Velocity. X indicates the x-axis component of the vector. The spatial coordinate. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -929,8 +921,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-square_of_static_pressure14943299600\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure14943299600\">\n",
+       "        <input id=\"group-square_of_static_pressure10174649800\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure10174649800\">\n",
        "        square_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa**2</li>           <li style=\"list-style-type: none; font-style: italic\">description : Square of static_pressure. Static air pressure is the amount of pressure exerted by air that is not moving.</li>      </il>\n",
@@ -961,8 +953,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-arithmetic_mean_of_static_pressure14963215900\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure14963215900\">\n",
+       "        <input id=\"group-arithmetic_mean_of_static_pressure10189250400\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure10189250400\">\n",
        "        arithmetic_mean_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Arithmetic mean of static_pressure. Static air pressure is the amount of pressure exerted by air that is not moving.</li>      </il>\n",
@@ -1108,8 +1100,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity15251982700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity15251982700\">\n",
+       "        <input id=\"group-x_velocity10295039800\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity10295039800\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -1366,19 +1358,18 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--15417604100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--15417604100\">\n",
+       "                        <input id=\"group-ds--10348508800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--10348508800\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name_table : 10428795</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name_table: 10428795</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-15425559500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-15425569200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-15425569200\">u</label>\n",
+       "                <ul id=\"ds-1-/u-10350394300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-10350397200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-10350397200\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name: x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units: km/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -1414,24 +1405,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pivmetalib import ssno\n",
     "from ontolutils import SSNO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "dd46a713-fb5a-414e-9668-ec157524c86a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xvel = ssno.StandardName(standard_name_table=ssno.StandardNameTable(identifier='https://doi.org/10.5281/zenodo.10428817'))\n",
-    "yvel = ssno.StandardName(standard_name_table=ssno.StandardNameTable(identifier='https://doi.org/10.5281/zenodo.10428817'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
    "id": "3ee62f0a-aea6-429f-bcda-7329b2ef42c0",
    "metadata": {},
    "outputs": [
@@ -1658,27 +1637,26 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--15834216900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--15834216900\">\n",
+       "                        <input id=\"group-ds--10394771200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--10394771200\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name_table : 10428795</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name_table: 10428795</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-15836976800\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-15836990300\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-15836990300\">u</label>\n",
+       "                <ul id=\"ds-1-/u-10395526700\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-10395528900\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-10395528900\">u</label>\n",
        "                <span class=\"h5tb-dims\">3 [] (int32)</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : x_velocity<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(standardNameTable={'identifier': 'https://doi.org/...)</span></div></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a>: x_velocity<a href=\"https://matthiasprobst.github.io/ssno#StandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#StandardName</span></a></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-16364291100\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/v-16364301000\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/v-16364301000\">v</label>\n",
+       "                <ul id=\"ds-1-/v-10396475700\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/v-10396478500\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/v-10396478500\">v</label>\n",
        "                <span class=\"h5tb-dims\">3 [] (int32)</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : y_velocity<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(standardNameTable={'identifier': 'https://doi.org/...)</span></div></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a>: y_velocity<a href=\"https://matthiasprobst.github.io/ssno#StandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#StandardName</span></a></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -1697,11 +1675,11 @@
     "with h5tbx.File(mode='w') as h5:\n",
     "    ds = h5.create_dataset('u', data=3)\n",
     "    ds.attrs['standard_name', SSNO.hasStandardName] = 'x_velocity'\n",
-    "    ds.rdf.object['standard_name'] = xvel\n",
+    "    ds.rdf.object['standard_name'] = SSNO.StandardName  # https://matthiasprobst.github.io/ssno#StandardName\n",
     "    \n",
     "    ds = h5.create_dataset('v', data=3)\n",
     "    ds.attrs['standard_name', SSNO.hasStandardName] = 'y_velocity'\n",
-    "    ds.rdf.object['standard_name'] = yvel\n",
+    "    ds.rdf.object['standard_name'] = SSNO.StandardName  # https://matthiasprobst.github.io/ssno#StandardName\n",
     "    h5.dump(collapsed=False)\n",
     "\n",
     "hdf_filename = h5.hdf_filename"
